<?xml version="1.0" encoding="utf-8"?>
<ro.code4.monitorizarevot.widget.ScrollViewWithFixedBottom xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin">
        <ro.code4.monitorizarevot.widget.ChangeBranchBarLayout
            android:id="@+id/change_branch_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/branch_question_environment"
            style="@style/label"/>

        <RadioGroup
            android:id="@+id/branch_group_environment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/label_top_spacing"
            android:orientation="horizontal">
            <ro.code4.monitorizarevot.widget.AnswerRadioButton
                android:id="@+id/branch_environment_urban"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/button_height"
                android:text="@string/branch_answer_urban"
                style="@style/radioButton" />
            <Space
                android:layout_width="@dimen/activity_horizontal_margin"
                android:layout_height="match_parent" />
            <ro.code4.monitorizarevot.widget.AnswerRadioButton
                android:id="@+id/branch_environment_rural"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/button_height"
                android:text="@string/branch_answer_rural"
                style="@style/radioButton" />
        </RadioGroup>

        <View style="@style/horizontalSeparator" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/branch_question_sex"
            style="@style/label"/>

        <RadioGroup
            android:id="@+id/branch_group_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/label_top_spacing"
            android:orientation="horizontal">
            <ro.code4.monitorizarevot.widget.AnswerRadioButton
                android:id="@+id/branch_sex_male"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:text="@string/branch_answer_man"
                style="@style/radioButton"/>
            <Space
                android:layout_width="@dimen/activity_horizontal_margin"
                android:layout_height="match_parent" />
            <ro.code4.monitorizarevot.widget.AnswerRadioButton
                android:id="@+id/branch_sex_female"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:text="@string/branch_answer_woman"
                style="@style/radioButton"/>
        </RadioGroup>

        <View style="@style/horizontalSeparator" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/branch_question_enter"
                style="@style/label"/>
            <Space
                android:layout_width="@dimen/activity_horizontal_margin"
                android:layout_height="match_parent" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/branch_question_leave"
                style="@style/label"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/branch_time_enter"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/hint_time"
                style="@style/input" />
            <Space
                android:layout_width="@dimen/activity_horizontal_margin"
                android:layout_height="match_parent" />
            <TextView
                android:id="@+id/branch_time_leave"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/hint_time"
                style="@style/input"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/button_continue"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:text="@string/button_continue_to_forms"
        style="@style/buttonEmbedded" />
</ro.code4.monitorizarevot.widget.ScrollViewWithFixedBottom>
