<?xml version="1.0" encoding="utf-8"?>
<ro.code4.monitorizarevot.widget.ScrollViewWithFixedBottom
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/note_container"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/note_header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/section_header_height"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <ImageView
                android:layout_width="@dimen/icon_block_size"
                android:layout_height="@dimen/icon_block_size"
                android:src="@drawable/ic_notes"
                android:contentDescription="@string/content_icon_building" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/header_text"
                android:textColor="@color/textPrimary"
                android:text="@string/note_title"
                android:layout_marginTop="@dimen/header_margin_vertial"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/subheader_text"
                android:textColor="@color/textPrimary"
                android:text=""
                android:layout_marginBottom="@dimen/header_margin_vertial"/>

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text="@string/note_description"
            android:labelFor="@+id/note_description"
            style="@style/label"/>
        <EditText
            android:id="@+id/note_description"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:gravity="top"
            android:lines="4"
            android:inputType="textMultiLine"
            android:hint="@string/note_description_hint"
            style="@style/input"/>
        <LinearLayout
            android:id="@+id/note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/note_photo"
                style="@style/label"/>
            <Space
                android:layout_width="@dimen/activity_horizontal_margin"
                android:layout_height="match_parent" />
            <ro.code4.monitorizarevot.widget.FileSelectorButton
                android:id="@+id/note_file_selector"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button_continue"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:text="@string/button_send"
        android:theme="@style/buttonEmbedded" />

</ro.code4.monitorizarevot.widget.ScrollViewWithFixedBottom>
