<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="ro.code4.votehack.LoginActivity">

    <View
        android:id="@+id/purple_background"
        style="@style/SharedElementLoginBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_login"
                android:id="@+id/logo"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/logo"
                android:layout_toEndOf="@+id/icon_phone"
                android:layout_toRightOf="@+id/icon_phone"
                android:textColorHint="@color/textDark">

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_height"
                    android:hint="@string/login_phone"
                    android:inputType="phone"
                    style="@style/InputLogin"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/icon_phone"
                android:layout_toEndOf="@+id/icon_lock"
                android:layout_toRightOf="@+id/icon_lock"
                android:textColorHint="@color/textDark"
                android:layout_marginBottom="@dimen/login_margin_bottom">

                <EditText
                    android:id="@+id/branch"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_height"
                    android:hint="@string/login_branch"
                    android:inputType="text"
                    style="@style/InputLogin"/>


            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:text="@string/login"
                android:theme="@style/buttonEmbedded"
                android:layout_gravity="bottom"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
